--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/pp231
+spring.datasource.username=root
+spring.datasource.password=Slatt4561
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+server.port=8100
+
