--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pp231
 spring.datasource.username=root
 spring.datasource.password=Slatt4561
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-server.port=8100
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+server.port=8080
 
