--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+
 	</dependencies>
 
 	<build>
@@ -67,6 +68,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.12.0</version>
 			</plugin>
 		</plugins>
 	</build>
